--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,7 +1,7 @@
 /* 프레임 내부 100% */
 .app {
   display: grid;
-  grid-template-columns: 260px 1fr;
+  grid-template-columns: 260px 1fr; /* Run Monitor 넓게 */
   width: 100%;
   height: 100%;
 }
