--- a/src/views/autotest/run.html
+++ b/src/views/autotest/run.html
@@ -11,7 +11,7 @@
       <button class="btn" id="rt-start">Start</button>
       <button class="btn" id="rt-stop">Stop</button>
     </div>
-    <div class="progress" id="rt-progress"><i></i></div>
+    <div class="progress" id="rt-progress"><i></i><span class="pct" id="rt-pct">0%</span></div>
   </section>
 
   <!-- 본문 레이아웃 -->
